# hex_renderer_python

./: .gitignore  Cargo.toml  README.md  example.md  example.py  flake.nix  hex_renderer_python.pyi  manual_types.pyi  pyproject.toml  regex.txt  test.py  test2.py  testing.py
.github/workflows/: CI.yml  page_docs.yml
docs/notebooks/: Grid.ipynb
docs/notebooks/.ipynb_checkpoints/: Grid-checkpoint.ipynb  Test-checkpoint.ipynb
hex_renderer_py/: __init__.py  __init__.pyi
hex_renderer_python/: __init__.py  __init__.pyi
hex_renderer_python_tmp/: __init__.py  __init__.pyi
hex_renderer_python_tmp/Point/: __init__.pyi
interface_macros/: Cargo.toml
interface_macros/impl/src/: lib.rs  py_gen.rs  py_gen_backup.rs  py_type_gen.rs
interface_macros/src/: lib.rs
src/: lib.rs  lib.rs.old
src/classes/: angle_sig.rs  collision_option.rs  color.rs  end_point.rs  grid_options.rs  grid_pattern_options.rs  grids.rs  intersections.rs  lines.rs  marker.rs  mod.rs  overload_options.rs  pattern_variant.rs  point.rs  triangle.rs
test/: conf.py  index.rst
test/_build/doctrees/: environment.pickle  index.doctree
test/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
