[package]
name = "hex_renderer_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hex_renderer_python"
crate-type = ["cdylib"]

[dependencies]
hex_renderer = "0.2.1"
pyo3 = "0.20.0"
serde = { version = "1.0.195", features = ["derive"] }
serde-pyobject = "0.2.0"
